# Starling

./: Cargo.toml  README.md
.forgejo/workflows/: mirror.yml  release.yml
.github/workflows/: mirror.yml  release.yml  sonarqube.yml
docs/: build-guide.html
src/: config.rs  crypto.rs  event.rs  lib.rs  logger.rs  main.rs  net.rs  sync.rs  util.rs
src/roost/: mod.rs
