[package]
name = "starling"
version = "0.3.2"
edition = "2024"
license = "Apache-2.0"
description = "Starling — federated p2p communications platform"

[lib]
name = "starling"

[[bin]]
name = "starling"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
chacha20poly1305 = "0.11"
chrono = { version = "0.4.45", features = ["serde"] }
data-encoding = "2.11.0"
flate2 = "1.1"
generic-array = "0.14.9"
iroh = "1.0.3"
iroh-gossip = "0.101.0"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.229", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.53.1", features = ["full"] }
uuid = { version = "1.24.0", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
